--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0; 
     padding: 0;
+    font-family: 'Rubik', sans-serif;
 }
 
 .container {
@@ -50,7 +51,7 @@ body {
 .phone {
     width: 100%;
     border-radius: 35px;
-    margin: 0 auto;
+    margin: 10% auto;
     border: 10px solid #fff;
     background: hsl(270, 20%, 96%);
     display: flex;
@@ -68,6 +69,7 @@ body {
     border-top-right-radius: 24px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    margin-bottom: 8px;
 }
 
 .notch {
@@ -93,7 +95,7 @@ body {
 }
 
 .back {
-    transform: scaleX(0.4) scaleY(2);
+    transform: scaleX(0.5) scaleY(2);
     color: #fff;
     font-weight: bolder;
     letter-spacing: -8px;
@@ -116,13 +118,15 @@ body {
 }
 
 .name h4 {
-    font-size: 16px;
+    font-size: 12px;
     color: #fff;
+    font-weight: 500;
 }
 
 .sub-ttl {
     color: hsl(276, 100%, 81%);
-    font-size: 10px;
+    font-size: 8px;
+    font-weight: 400;
 }
 
 .points {
@@ -153,6 +157,7 @@ body {
     padding: 5px 10px;
     margin: 2px;
     font-size: 10px;
+    font-weight: 400;
     line-height: 1.5;
 }
 
@@ -210,9 +215,9 @@ body {
 .price {
     text-align: center;
     line-height: 0;
-    font-weight: 900;   
+    font-weight: 700;   
     flex-grow: 1;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .write {
